concord_examples/tests/ui/rate_limit_unknown_key.stderr
error: unknown rate_limit key `region`
       no rate_limit keys are declared
  --> tests/ui/rate_limit_unknown_key.rs:10:31
   |
10 |             bucket method by [region, endpoint] { // ERROR: unknown key
   |                               ^^^^^^
